--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="nav">
-      <a href="./favHeros.html">Favorite Heros</a>
+      <a href="./MyHeros.html">Favorite Heros</a>
     </div>
     <header>
       <h1 id="title">Super Hero Hunter</h1>
